[package]
name = "web_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
game_core = { path = "../game_core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
